k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-angular-noche-dorada
  labels:
    app: angular-noche-dorada
spec:
  replicas: 1
  selector:
    matchLabels:
      app: angular-noche-dorada
  template:
    metadata:
      labels:
        app: angular-noche-dorada
    spec:
      containers:
      - name: angular-noche-dorada
        image: angularnochedorada:latest
        ports:
        - containerPort: 80
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: my-app-service-noche-dorada
spec:
  selector:
    app: angular-noche-dorada
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
