k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noche-dorada-ingress
spec:
  rules:
  - host: helloworld.example
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-app-service-noche-dorada
            port:
              number: 80
